--- a/_pages/gewinnspiel/index.html
+++ b/_pages/gewinnspiel/index.html
@@ -9,7 +9,21 @@ banner:
   title: Gewinnspiel
   title-sub: Gewinnen Sie eine Fotoreise nach Südafrika – mit Ihrer eigenen Nikon Kamera.
 
-intro: Begeben Sie sich auf ein einmaliges Abenteuer nach Südafrikas inklusive Flügen und&nbsp;Hotel und verwandeln Sie mit der Nikon D3500 atemberaubende Momente in bildgewaltige Fotoaufnahmen für die&nbsp;Ewigkeit.
+intro: Begeben Sie sich auf ein einmaliges Abenteuer nach Südafrika inklusive Flügen und&nbsp;Hotel und verwandeln Sie mit der Nikon D3500 atemberaubende Momente in bildgewaltige Fotoaufnahmen für die&nbsp;Ewigkeit.
+prizes:
+
+  - id: one
+    title: Erleben Sie eine Fotoreise nach Südafrika
+    content: "Riesige Nationalparks, endlose Weiten und menschenleere Strände, die ganze Flora und Fauna und kulturelle Vielfalt Südafrikas wartet auf Sie. Gewinnen Sie 7 Übernachtungen im Doppelzimmer für 2 Personen, inklusive Frühstück und fliegen Sie mit South African Airways von Frankfurt oder München nach Kapstadt, um die Safari Ihres Lebens zu erfahren."
+    enter-cta: Jetzt teilnehmen
+    external-link: "#"
+
+  - id: two
+    title: Erinnerungen, die bleiben – dank Nikon
+    content: "Ihre sichere Begleitung im Busch: die Nikon Z50, die kompakteste Nikon-Systemkamera, ebenso gut für Fotos wie für actionreiche 4K-Filme geeignet. Zwei Objektive sind ebenfalls mit dabei. Mit dem Weitwinkelobjektiv NIKKOR Z DX 16–50 mm (1:3,5–6,3 VR) fangen Sie auch auf kurze Distanzen alle Details ein. Das Telezoomobjektiv NIKKOR Z DX 50–250 mm (1:4,5–6,3 VR) ist Ihre erste Wahl für schnelle Bewegungen und ferne Einzelheiten. So entgeht Ihnen keine Herde mehr."
+    enter-cta: Jetzt teilnehmen
+    external-cta: Mehr erfahren
+    external-link: "https://www.mynikon.de/inspiration/nikon-magazin/jetzt-erhaeltlich-nikon-z50"
 
 competition-form:
   id: comp
