--- a/_pages/highlights/index.html
+++ b/_pages/highlights/index.html
@@ -8,26 +8,26 @@ content-pages: true
 
 banner:
   title: Highlights
-  title-sub: Lorem ipsum dolor sit amet, consectetur adipisicing elit
+  title-sub: Südafrika von der besten Seite
   title-size: banner-title--xl
   bg-hero: "background-position: 65% bottom;"
 
-summary: "Lorem ipsum dolor sit amet, consectetur adipisicing. Elit, dolor corrupti culpa labore aspernatur voluptates. Amet accusamus voluptas odit harum necessitatibus consequatur delectus rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
+summary: "Voller Vielfalt und Strände, reich an Abenteuern und entspannt, charmant und authentisch, mehr für Ihr Geld und für Ihren Instagram-Account – wir könnten noch lang Südafrikas Vorzüge aufzählen."
 cta: "Mehr erfahren"
 
-intro-title: "Lorem ipsum dolor sit amet"
-intro: "Lorem ipsum dolor sit amet, consectetur adipisicing. Elit, dolor corrupti culpa labore aspernatur voluptates. Amet accusamus voluptas odit harum necessitatibus consequatur delectus rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
+intro-title: ""
+intro: "Südafrika ist längst kein Geheimtipp mehr. Wanderer und Natur&shy;liebhaber finden hier ihr Glück ebenso wie Kultur- oder Safari&shy;begeisterte. Was zeichnet dieses schillernde Land zwischen zwei Ozeanen aus? Was sollte man sich nicht entgehen lassen?"
 
 
 highlights:
 
-  title: Südafrikas Highlights
-  description: Lorem ipsum dolor sit amet. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam!
+  title: Südafrikas Sensationen
+  description: "Natürlich - Kapstadt und Johannes&shy;burg stehen ganz oben auf jeder Liste. Aber wussten Sie, dass Sie hier den drittgrößten Canyon der Welt finden, ideale Orte zur Walbeobachtung und unzählige Cultural Villages, die Sie in eine andere Zeit transportieren?"
   items:
 
     - title: Pinguine am Boulder’s Beach
       id: one
-      description: "Hier posen Pinguine statt Menschen für Strand&shy;selfies: am Boulder Beach, auf dem Weg zum Kap der Guten Hoffnung. Etwas 2.500 Jackass- und Brillen&shy;pinguine erhei&shy;tern Besucher, die sich am Abschnitt Foxy Beach den Tieren nähern können. Die drei malerischen Strände von Boulders Beach laden dabei auch zum Schwimmen ein."
+      description: "Hier posen Pinguine statt Menschen für Strandselfies: am Boulder Beach, auf dem Weg zum Kap der Guten Hoffnung. Etwas 2.500 Jackass- und Brillenpinguine erheitern Besucher, die sich am Abschnitt Foxy Beach den Tieren nähern können. Die drei malerischen Strände von Boulders Beach laden dabei auch zum Schwimmen ein."
 
     - title: "Kreativzentrum Maboneng"
       id: two
@@ -39,11 +39,11 @@ highlights:
 
     - title: "Zum Gipfel der Drakensberge"
       id: four
-      description: "An der Grenze zu Lesotho liegen die Drakensberge, mit dem Royal Natal National Park, der für Wanderer ein Muss ist. Vom Sentinel Car Park starten Sie eine Wanderung zum Gipfel, 12 km an Weg, das in fünf Stunden zum Amphitheater und zu den majestätischen Tugela Wasserfällen führt."
+      description: "An der Grenze zu Lesotho liegen die Drakensberge, mit dem Royal Natal National Park, der für Wanderer ein Muss ist. Vom Sentinel Car Park starten Sie eine Wanderung zum Gipfel, 12 km an Weg, die in fünf Stunden zum Amphitheater und zu den majestätischen Tugela Wasserfällen führt."
 
     - title: "Majestätische Augrabies Falls"
       id: five
-      description: "Apropos Wasserfälle: unweit der nami&shy;bischen Grenze rauscht es in den Augra&shy;bies Falls im Chor in die Tiefe. Der Oranje River stürzt hier im Schwall 56 Meter in die Tiefe. Wenn dann nach&shy;mittags die Sonne die Granit&shy;felsen anleuchtet, kann das niemanden kalt lassen. "
+      description: "Apropos Wasserfälle: unweit der namibischen Grenze rauscht es in den Augrabies Falls im Chor in die Tiefe. Der Oranje River stürzt hier 56 Meter tief. Wenn dann nachmittags die Sonne die Granitfelsen anleuchtet, kann das niemanden kalt lassen."
 
     - title: "Blütenmeer in Namaqualand"
       id: six
@@ -51,21 +51,21 @@ highlights:
 
     - title: Walbeobachtung
       id: seven
-      description: "Gleich mehrere Orte in Südafrika eignen sich sehr gut für Walbeobachtung. In Hermanus am Western Cape sind die Meeresriesen von Juni bis November zu sichten, an der Elephant Coast am Indischen Ozean sind die größten Säugetiere der Welt das ganze Jahr über zu erhaschen."
+      description: "Gleich mehrere Orte in Südafrika eignen sich sehr gut für Wal&shy;beobachtung. In Hermanus am Western Cape sind die Meeresriesen von Juni bis November zu sichten, an der Elephant Coast am Indischen Ozean sind die größten Säugetiere der Welt das ganze Jahr über zu erhaschen."
 
-    - title: "Per Ballon im Pilanesberg NP"
+    - title: "Per Ballon im Pilanesberg Nationalpark"
       id: eight
-      description: "Wer sich nach ganz oben traut, für den ist eine Ballon&shy;fahrt im Pilanesberg National&shy;park das Richtige. Die Luft-Safari führt über erloschene Vulkankrater hinweg und eröffnet einzigartige Vogel&shy;perspek&shy;tiven auf Antilopen und Elefantenherden."
+      description: "Wer sich nach ganz oben traut, für den ist eine Ballonfahrt im Pilanesberg Nationalpark das Richtige. Die Luft-Safari führt über erloschene Vulkankrater hinweg und eröffnet einzigartige Vogel&shy;pers&shy;pektiven auf Antilopen und Elefantenherden."
 
     - title: "Traditionelle Ndebele-Dörfer"
       id: nine
-      description: "Wie wäre es etwas traditioneller? In der Stadt Siyabuswa findet sich das Museums&shy;dorf Kghodwana. Seine Einwohner, die Ndebele lassen sich 1000 Jahre zurück&shy;verfolgen und sind für ihre farben&shy;frohe Kleidung und die geome&shy;trischen Muster ihrer Häuser bekannt."
+      description: "Wie wäre es etwas traditioneller? In der Stadt Siyabuswa findet sich das Museumsdorf Kghodwana. Seine Einwohner, die Ndebele lassen sich 1000 Jahre zurückverfolgen und sind für ihre farbenfrohe Kleidung und die geometrischen Muster ihrer Häuser bekannt."
 
 
 reasons:
 
   title: 11 Gründe für eine Reise nach&nbsp;Südafrika
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis,  voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam!
+  description: Warum Südafrika? Um den südlichsten Punkt des Kontinents zu besuchen. Um ein einzigartiges Lebensgefühl kennenzulernen. Um an dieser Vielfalt teilzuhaben.
   items:
 
       - id: one
@@ -86,12 +86,12 @@ reasons:
       - id: four
         count: "04"
         title: "Naturschönheiten"
-        answer: "Es sind zu viele, um sie alle aufzuzählen: die rot leuchtende Kalahari-Savanne, Kapstadt mit dem Tafelberg, die idyllische Garden Route mit den Lagunen in Knysna, die Felsküsten am Atlantik, der Addo Elephant Nationalpark, die schimmernden Strände..."
+        answer: "Es sind zu viele, um sie alle aufzuzählen: die rot leuchtende Kalahari-Savanne, Kapstadt mit dem Tafelberg, die idyllische Garden Route mit den Lagunen in Knysna, die Felsküsten am Atlantik, der Addo Elephant Nationalpark, die schimmernden Strände...die Liste lässt sich ewig fortsetzen."
 
       - id: five
         count: "05"
         title: "Wilde Tiere"
-        answer: "Es ist ein Leichtes, den Big Seven zu begegnen: Löwe, Leopard, Elefant, Nashorn, Büffel, Wal und weißer Hai. Neben diesen Elite-Vertretern des Tierreiches machen auch Antelopen, Pinguine, Erdmännchen und noch viel mehr die Aufwartung. So werden Sie im Nu zum Safari-Fan."
+        answer: "Es ist ein Leichtes, den Big Seven zu begegnen: Löwe, Leopard, Elefant, Nashorn, Büffel, Wal und weißer Hai. Neben diesen Elite-Vertretern des Tierreiches machen auch Antilopen, Pinguine, Erdmännchen und noch viele weitere die Aufwartung. So werden Sie im Nu zum Safari-Fan."
 
       - id: six
         count: "06"
@@ -106,7 +106,7 @@ reasons:
       - id: eight
         count: "08"
         title: "Schönwetter-Garantie "
-        answer: "Diese ganzen Aktivitäten an der frischen Luft würden natürlich nur halb so viel Spaß machen, wenn das Wetter von Regen und Sturm bestimmt wäre. Dem ist nicht so: wenige Großstädte der Welt bieten mehr Sonnenstunden als Kapstadt mit seinen 3.100 Stunden."
+        answer: "Diese ganzen Aktivitäten an der frischen Luft würden natürlich nur halb so viel Spaß machen, wenn das Wetter von Regen und Sturm bestimmt wäre. Dem ist nicht so: wenige Großstädte der Welt bieten mehr Sonne als Kapstadt mit seinen 3.100 Stunden."
 
       - id: nine
         count: "09"
@@ -121,7 +121,7 @@ reasons:
       - id: eleven
         count: "11"
         title: "Authentischer Genuss"
-        answer: "Südafrikas Genüsse sind vielzählig und kommen aus dem Meer (Languste, Snoek-Fisch) oder vom Land (Karoo-Lamm, Straußensteaks, getrocknetes Biltong-Fleisch). Nicht zuletzt die Unzahl an aromatischen Weinen zu recht moderaten preisen ist etwas, das Sie nicht verpassen sollten."
+        answer: "Südafrikas Genüsse sind vielzählig und kommen aus dem Meer (Languste, Snoek-Fisch) oder vom Land (Karoo-Lamm, Straußensteaks, getrocknetes Biltong-Fleisch). Nicht zuletzt die Unzahl an aromatischen Weinen zu moderaten Preisen ist etwas, das Sie nicht verpassen sollten."
 
 
 
@@ -129,12 +129,12 @@ reasons:
 ---
 
 
-<div class="vpad--xxl text--white bg--turquoise">
+<div class="vpad--xxl bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
   <div class="container">
     <div class="width width--lg">
-       <div class="text text--xl text--center">
+       <div class="text text--xxxl text--justify">
          <h2 class="title title--lg text--bolder">{{page.intro-title}}</h2>
-         <div class="space--sm text--normal text--italic"> <p>{{page.intro}}</p></div>
+         <div class="space--sm text--normal text--justify"> <p>{{page.intro}}</p></div>
        </div>
     </div>
   </div>
@@ -142,16 +142,15 @@ reasons:
 
 
 
-<div class="bv-parallax" style="background-image:url({{site.img}}/content/{{page.id}}/reasons/hero.jpg); background-repeat:no-repeat; background-size:cover; background-position:top center; ">
+<div class="bv-parallax" style="background-image:url({{site.img}}/content/{{page.id}}/reasons/hero.jpg); ">
   <div class="vpad--xxxl">
     <div class="container">
-        <div class="row row--justify row--xl-6-6 row--no-gutters " >
+        <div class="row row--justify row--xl-6-6 row--no-gutters">
         <div class="col col--xl-8">
-           <div class="text text--normal text--white text--white text--xl">
-             <h2 class="title title--xl text--bolder">{{page.reasons.title}}</h2>
+           <div class="text text--bold text--white text--xxl">
+             <h2 class="title title--xl text--bolder bv-headline-divider">{{page.reasons.title}}</h2>
              <div class="space--xs"></div>
              <p>{{page.reasons.description}}</p>
-
            </div>
         </div>
       </div>
@@ -186,8 +185,8 @@ reasons:
 
         <div class="row row--justify row--xl-6-6 row--no-gutters " >
         <div class="col col--xl-8">
-           <div class="text text--normal text--white text--white text--xl">
-             <h2 class="title title--xl text--bolder">{{page.highlights.title}}</h2>
+           <div class="text text--bold text--white text--xxl">
+             <h2 class="title title--xl bv-headline-divider text--bolder">{{page.highlights.title}}</h2>
              <div class="space--xs"></div>
              <p>{{page.highlights.description}}</p>
 
@@ -198,15 +197,15 @@ reasons:
   </div>
 
 
-  <div class="container bg--white"  >
+  <div class="container bg--white" style="border-radius: 6px;" >
   <div class="row  row--xl-6-6 row--gutters-sm"  >
   {% for highlight in page.highlights.items %}
 
     <div class="col text text--md text--justify ">
     <div class="space--xxs"></div>
     <div class="space--xxs"></div>
-      <div class="bg-img bg--white bg-img--16-9" style="background-image: url('{{site.img}}/content/{{page.id}}/highlights/{{highlight.id}}.jpg');"> </div>
-      <div class="bg--white ">
+      <div class="bg-img bg--white bg-img--16-9"  style="border-radius: 3px; background-image: url('{{site.img}}/content/{{page.id}}/highlights/{{highlight.id}}.jpg');"> </div>
+      <div class="bg--white">
       <div class="space--sm"></div>
         <h5 class="title title--xs text--left text--bolder ">{{highlight.title}}</h5>
         <div class="space--xs"></div>
@@ -220,6 +219,7 @@ reasons:
   </div>
   <div class="space--xl"></div>
 </div>
-
 <div class="space--xxxxl"></div>
 </div>
+
+{% include page/empfehlung.html %}
