--- a/_pages/wildlife/index.html
+++ b/_pages/wildlife/index.html
@@ -8,66 +8,65 @@ content-pages: true
 
 banner:
   title: Wildlife & Safari
-  title-sub: Lorem ipsum dolor sit amet, consectetur adipisicing elit
+  title-sub: Auf der richtigen Fährte
   title-size: banner-title--xl
   bg-hero: "background-position: 65% bottom;"
 
-summary: "Lorem ipsum dolor sit amet, consectetur adipisicing. Elit, dolor corrupti culpa labore aspernatur voluptates. Amet accusamus voluptas odit harum necessitatibus consequatur delectus rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
+summary: "Auge in Auge mit Dickhäutern, auf der Fährte von Geparden: erleben Sie tierische Abenteuer in Nationalparks und privaten Game Reserves, tauchen Sie zu Korallen und lassen Sie sich von eindrucksvollen Panoramen den Atem verschlagen."
 cta: "Mehr erfahren"
 
-intro-title: "Lorem ipsum dolor sit amet"
-intro: "Lorem ipsum dolor sit amet, consectetur adipisicing. Dolor corrupti culpa labore aspernatur voluptates elit. Aliquid, placeat, emet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam est!"
+intro-title: "Drei der fazinierendsten Nationalparks"
+intro: "Der Krüger-Nationalpark ist ein Begriff und eine Institution. Unter den 19 Nationalparks in Südafrika gibt es aber genug andere, die sich ihm zur Seite stellen können. Mögen Sie Elefanten, Schildkröten oder Flamingos? Weiterlesen,&nbsp;bitte!"
 
 
 parks:
 
   title: Drei der fazinierendsten Nationalparks
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam!
+  description: Der Krüger-Nationalpark ist ein Begriff und eine Institution. Unter den 19 Nationalparks in Südafrika gibt es aber genug andere, die sich ihm zur Seite stellen können. Mögen Sie Elefanten, Schildkröten oder Flamingos? Weiterlesen,&nbsp;bitte.
   items:
 
     - title: 1. Krüger Nationalpark
       id: one
-      description: "Das größte Wildschutzgebiet Südafrikas liegt im Nordosten des Landes in der Provinz Mpumalanga. Der Krüger-Nationalpark ist ein Gigant in jeglicher Hinsicht: auf 1,9 Millionen Hektar erstreckt sich der Park und wird durch ein 2.500 Kilometer langes Netz von Straßen erschlossen. Bis zu 1,4 Millionen Besucher im Jahr erleben große und kleine Raubkatzen, Giraffen und Nilpferde, Büffel und Krokodile, kurzum alle Tiere, die man in Afrika erwartet in Aktion. Mindestens 3 Nächte sollten Sie für einen Besuch einplanen. Obwohl jede Jahreszeit lohnend ist, ist im Sommer die Chance, Tierbabys zu sehen, größer."
+      description: "Das größte und bekannteste Wildschutzgebiet Südafrikas liegt im Nordosten, in der Provinz Mpumalanga. Der Krüger-Nationalpark ist ein Gigant in jeglicher Hinsicht: 1,9 Millionen Hektar groß und durch ein 2.500 Kilometer langes Netz von Straßen erschlossen. Bis zu 1,4 Millionen Besucher im Jahr bewundern hier große und kleinere Raubkatzen, Giraffen und Nilpferde, Büffel und Krokodile – kurzum alle Tiere, die man in Afrika erwartet. Mindestens 3 Nächte sollten Sie für einen Besuch einplanen. Obwohl jede Jahreszeit lohnend ist, ist im Sommer die Chance, Tierbabys zu sehen, größer."
 
     - title: "2. Addo-Elefanten-Nationalpark"
       id: two
-      description: "Knappe 70 Kilometer nördlich von Port Elizabeth im Ostkap liegt im Addo liegt der Fokus auf Schutz der Elefanten. Nachdem 11 Elefanten im Jahre 1931 den Grundstock des Parks bildeten, streifen heute bereits 600 Dickhäuter durch den Park, vorbei an Kap-Büffeln, und zahlreichen Antilopenarten. Wenn Sie von den friedvollen Landriesen doch genug haben sollten, schafft die Küste mit Walen, Haien und Robben Abhilfe. Wanderer werden vom Zuurberg und von der Dünenlandschaft Alexandrias entzückt sein: 32 Kilometer sind auf dem Alexandria Hiking Trail zurückzulegen, jeder davon beeindruckender als der nächste."
+      description: "Knappe 70 Kilometer nördlich von Port Elizabeth im Ostkap liegt der Addo-Nationalpark mit Fokus auf Elefanten. Nachdem 11 Elefanten im Jahre 1931 den Grundstock des Parks bildeten, streifen heute bereits 600 Dickhäuter durch den Park, vorbei an Kap-Büffeln und zahlreichen Antilopenarten. Wenn Sie von den friedvollen Landriesen doch genug haben sollten, schafft die Küste mit Walen, Haien und Robben Abhilfe. Wanderer werden vom Zuurberg und von der Dünenlandschaft Alexandrias entzückt sein: 32 Kilometer sind auf dem Alexandria Hiking Trail zurückzulegen, jeder davon beeindruckender als der nächste."
 
     - title: "3. iSimangaliso Wetland Park"
       id: three
-      description: "Safari kann jeder - ein ganz unvergleichliches Erlebnis erwartet an der subtropischen Küste von KwaZulu Natal im Osten Südafrikas. Das UNESCO-Weltnaturerbe des iSimangaliso Wetland Parks besteht aus acht zusammenhängenden Ökosystemen, darunter Küstenwald, die Sodwana Bay, bestes Tauchrevier des Landes und Heimat des Lebenden Fossils, des Quastenflossers, Dünenwälder und mehr. Nilpferde leben neben Krokodilen, der Lake St Lucia ist ein Magnet für Pelikane und Flamingos, Dutzende an Frosch- und hunderte Vogelarten vervollständigen die Liste. Ganz besonders: November bis März kommen Leder- und Karettschildköten zur Eiablage an die Strände."
+      description: "Safari kann jeder - ein ganz unvergleichliches Erlebnis wartet dagegen an der subtro&shy;pischen Küste von KwaZulu Natal im Osten Südafrikas. Das UNESCO-Weltnaturerbe des iSimangaliso Wetland Parks besteht aus acht zusammenhängenden Ökosystemen, darunter Küstenwald, die Sodwana Bay, bestes Tauchrevier des Landes und Heimat des Quastenflossers, Dünenwälder und mehr. Nilpferde leben neben Krokodilen, der Lake St Lucia ist ein Magnet für Pelikane und Flamingos, Dutzende an Frosch- und hunderte Vogelarten vervoll&shy;ständigen die Liste."
 
 
 safaris:
 
-  title: Safaris
-  description: Lorem ipsum dolor sit amet, consectetur adipisicing. Eos rerum optio est consequuntur ut quibusdam soluta molestias perspiciatis, dolor corrupti culpa labore aspernatur voluptates, ipsum laborum eligendi placeat et fugiat sit, quidem, totam iure ea ad velit! Aliquid, placeat, ea. Amet accusamus voluptas odit harum necessitatibus consequatur delectus autem rerum architecto voluptatum. Consequuntur recusandae nemo, magni excepturi laborum nihil aperiam!
+  title: Unterwegs auf Safari
+  description: Südafrika zu besuchen, ohne auf Safari zu gehen, ist wie Paris zu besuchen, ohne den Louvre zu sehen. Es gibt mehrere Arten und Weisen, sich den wilden Tieren zu nähern, in jedem Fall ist ein Adrenalinrausch vorprogrammiert.
 
 
 
 
 ---
 
-
+<!--
 <div class="vpad--xxl text--white bg--turquoise">
   <div class="container">
     <div class="width width--lg">
-       <div class="text text--xl text--center text--normal">
-         <h2 class="title title--lg text--center text--bold">{{page.intro-title}}</h2>
-         <div class="space--xs"></div>
-         <p>{{page.intro}}</p>
+       <div class="text text--xl text--center">
+         <h2 class="title title--lg text--bolder">{{page.intro-title}}</h2>
+         <div class="space--sm text--normal text--italic"> <p>{{page.intro}}</p></div>
        </div>
     </div>
   </div>
-</div>
+</div>-->
 
-<div class="" style="background-image:url({{site.img}}/content/{{page.id}}/parks/hero.jpg); background-repeat:no-repeat; background-size:cover; background-position: center;">
+<div class="bv-parallax" style="background-image:url({{site.img}}/content/{{page.id}}/parks/hero.jpg); background-repeat:no-repeat; background-size:cover; background-position: center;">
   <div class="vpad--xxxl">
     <div class="container">
       <div class="row row--justify row--xl-6-6 row--no-gutters " >
       <div class="col col--xl-8">
          <div class="text text--normal text--white text--white text--xl">
-           <h2 class="title title--xl text--bolder">{{page.parks.title}}</h2>
+           <h2 class="title title--xl bv-headline-divider text--bolder">{{page.parks.title}}</h2>
            <div class="space--xs"></div>
            <p>{{page.parks.description}}</p>
 
@@ -77,30 +76,32 @@ safaris:
   </div>
   </div>
 </div>
-
+<div class="bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
 {% for park in page.parks.items %}
-    <div class="harvey{% cycle '', ' harvey--swap bg--darker text--white' %}">
+    <div class="harvey {% cycle '', ' harvey--swap' %}">
       <div class="harvey__img" style="background-image: url('{{site.img}}/content/{{page.id}}/parks/{{park.id}}.jpg');"></div>
-      <div class="harvey__text boxpad--lg text text--xxl">
+      <div class="harvey__text text--justify boxpad--lg text text--xxl">
         <h2 class="title title--sm text--bolder text--upper">{{park.title}}</h2>
         <div class="space--xxs"></div>
         <p>{{park.description}}</p>
         <div class="space--lg"></div>
-
       </div>
     </div>
  {% endfor %}
+</div>
 
- <div class="" style="background-image:url({{site.img}}/content/{{page.id}}/safari/hero.jpg); background-repeat:no-repeat; background-size:cover; background-position:bottom center;">
+
+ <div class="bv-parallax" style="background-image:url({{site.img}}/content/{{page.id}}/safari/hero.jpg); background-repeat:no-repeat; background-size:cover; background-position: center;">
    <div class="vpad--xxxl">
      <div class="container">
        <div class="row row--justify row--xl-6-6 row--no-gutters " >
        <div class="col col--xl-8">
-          <div class="text text--normal text--white text--white text--xl">
-            <h2 class="title title--xl text--bolder">{{page.safaris.title}}</h2>
+       <div class="space--xxxl"></div>
+          <div class="text text--normal text--white text--xl">
+            <h2 class="title title--xl bv-headline-divider text--bolder">{{page.safaris.title}}</h2>
             <div class="space--xs"></div>
             <p>{{page.safaris.description}}</p>
-
+            <div class="space--xxxl"></div>
           </div>
        </div>
      </div>
@@ -108,23 +109,23 @@ safaris:
    </div>
  </div>
 
+ <div class="bg--light bv-parallax" style="background-image: url('{{site.img}}/icons/bg-pattern-transp-2000px.png');">
+  <div class="container vpad--xl">
+    <div class="row row--xl-4-4-4 row--lg-6-6  " >
 
- <div class="bg--light" style="background-image:url({{site.img}}/content/{{page.id}}/safari/bg-pattern_.jpg); background-repeat:no-repeat; background-size:cover; background-position: top center;">
-  <div class="container">
-    <div class="space--xxl"></div>
-      <div class="row row--xl-4-4-4 row--lg-6-6 row--gutters-md " >
       {% for safari in site.data.sections %}
         <div class="col">
-          <div id="tracking-poi-{{poi.id}}" class="bg--white bv-thumb-zoom js-open-modal boxpad--md " data-open-modal="{{safari.id}}" style="cursor: pointer; {{safari.layer}} {{safari.rotation}} ">
+          <div id="tracking-poi-{{poi.id}}" class="bg--white bv-thumb-zoom js-open-modal boxpad--sm " data-open-modal="{{safari.id}}" style="cursor: pointer; {{safari.layer}} {{safari.rotation}} ">
             <div class="bg-img bg-img--4-3 bg-img--md-1-1 bg-img--lg-1-1 bv-thumb-vignette" style="background-image: url('{{site.img}}/content/wildlife/safari/{{safari.id}}.jpg');"></div>
             <div class="space--sm"></div>
             <div class="vpad--xxs bg--white text text--serif text--xxl text--center">{{safari.title}}</div>
           </div>
-          <div class="space--sm"></div>
         </div>
       {% endfor %}
 
     </div>
-    <div class="space--xxl"></div>
+    <div class="space--xl"></div>
   </div>
 </div>
+
+{% include page/empfehlung.html %}
